--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: The Offical Site of Cozy Central
+description: Want to learn about the amazing hotel (Cozy Central)? Well this is the place for you!
