--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-architect
 title: Cozy Central
 description: Want to learn about the amazing hotel (Cozy Central)? Well this is the place for you!
